<resources>
    <string name="app_name">海豚邦</string>
    <string name="text_information_title">被保人信息</string>
    <string name="text_information_birthday_title">您的出生年月？</string>
    <string name="text_information_birth_year_title">年</string>
    <string name="text_information_birth_month_title">月</string>
    <string name="text_information_citizenship_title">您的国籍？</string>
    <string name="text_information_gender_title">您的性别</string>
    <string name="text_information_height_title">您的身高？</string>
    <string name="text_information_weight_title">您的体重？</string>
    <string name="text_information_province_title">您所在的省份？</string>
    <string name="text_information_city_title">您所在的城市？</string>
    <string name="text_information_industry_title">您所在的行业？</string>
    <string name="text_information_level_title">职务</string>
    <string name="text_information_education_level_title">受教育程度？</string>
    <string name="text_information_marital_status_title">婚姻状况？</string>
    <string name="text_information_family_number_title">家庭成员数量（如未婚请按与父母为一个单位计算）</string>
    <string name="text_information_monthly_income_title">投保人月收入区间？</string>
    <string name="text_informationii_title">受保人健康问卷</string>
    <string name="text_informationii_smoking_title">您是否吸烟？若是，请说明每天吸烟数量</string>
    <string name="text_informationii_accident_illness_title">在过去五年内，你曾否遭遇意外或疾病？</string>
    <string name="text_informationii_medical_treatment_title">在过去一年内，是否遭遇意外或患疾病，以致需要接受医疗或药物治疗超过14天以上？</string>
    <string name="text_informationii_surgery_title">是否在医院或诊所接受任何大型手术？</string>
    <string name="text_informationii_pregnancy_title">目前是否怀孕？（12岁以上女性填）</string>
    <string name="text_informationii_optional_title">选填部分：</string>
    <string name="text_informationii_blood_illness_title">您的直系亲属曾否患有血液疾病，肝病，心脏病，肾病（例如：多囊性肾病），中风，糖尿病，高血压，癌症，爱滋病或遗传性疾病？</string>
    <string name="text_informationii_muscle_illness_title">肌肉和骨骼系统或皮肤有关的疾病，如：关节炎，风湿病，痛风，坐骨神经痛，或其他骨骼及脊椎的问题？</string>
    <string name="text_informationii_neural_illness_title">与神经系统，精神或与脑相关的疾病，眼或耳有问题，如：瘫痪，神经紧张，失明，失聪，晕眩或癫痫？ </string>
    <string name="text_informationii_circle_illness_title">与循环系统，心脏或血液有关的疾病，如：心跳不正常，心杂音，胸部不适，血压不正常，中风或贫血？  </string>
    <string-array name="text_information_birth_year_choices">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
    </string-array>
    <string-array name="text_information_birth_month_choices">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="text_information_gender_choices">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="text_information_province_choices">
        <item>北京市</item>
        <item>天津市</item>
        <item>上海市</item>
        <item>重庆市</item>
        <item>河北省</item>
        <item>山西省</item>
        <item>辽宁省</item>
        <item>吉林省</item>
        <item>黑龙江省</item>
        <item>江苏省</item>
        <item>浙江省</item>
        <item>安徽省</item>
        <item>福建省</item>
        <item>江西省</item>
        <item>山东省</item>
        <item>河南省</item>
        <item>湖北省</item>
        <item>湖南省</item>
        <item>广东省</item>
        <item>海南省</item>
        <item>四川省</item>
        <item>贵州省</item>
        <item>云南省</item>
        <item>陕西省</item>
        <item>甘肃省</item>
        <item>台湾省</item>
        <item>内蒙古自治区</item>
        <item>广西壮族自治区</item>
        <item>西藏自治区</item>
        <item>宁夏回族自治区</item>
        <item>新疆维吾尔自治区</item>
        <item>香港特别行政区</item>
        <item>澳门特别行政区</item>
    </string-array>
    <string-array name="text_information_city_choices">
        <item>广州市</item>
        <item>深圳市</item>
        <item>珠海市</item>
        <item>汕头市</item>
        <item>佛山市</item>
        <item>韶关市</item>
        <item>湛江市</item>
        <item>肇庆市</item>
        <item>江门市</item>
        <item>茂名市</item>
        <item>惠州市</item>
        <item>梅州市</item>
        <item>汕尾市</item>
        <item>河源市</item>
        <item>阳江市</item>
        <item>清远市</item>
        <item>东莞市</item>
        <item>中山市</item>
        <item>潮州市</item>
        <item>揭阳市</item>
        <item>云浮市</item>
        <item>增城市</item>
        <item>从化市</item>
        <item>南雄市</item>
        <item>乐昌市</item>
        <item>英德市</item>
        <item>连州市</item>
        <item>台山市</item>
        <item>开平市</item>
        <item>鹤山市</item>
        <item>恩平市</item>
        <item>恩平市</item>
        <item>恩平市</item>
        <item>廉江市</item>
        <item>雷州市</item>
        <item>吴川市</item>
        <item>高州市</item>
        <item>化州市</item>
        <item>信宜市</item>
        <item>高要市</item>
        <item>四会市</item>
        <item>兴宁市</item>
        <item>陆丰市</item>
        <item>阳春市</item>
        <item>普宁市</item>
        <item>罗定市</item>
    </string-array>
    <string-array name="text_information_industry_choices">
        <item>A 农、林、牧、渔业</item>
        <item>B 采矿业</item>
        <item>C 制造业</item>
        <item>D 电力、热力、燃气及水生产和供应业</item>
        <item>E 建筑业</item>
        <item>F 批发和零售业</item>
        <item>G 交通运输、仓储和邮政业</item>
        <item>H 住宿和餐饮业</item>
        <item>I 信息传输、软件和信息技术服务业</item>
        <item>J 金融业</item>
        <item>K 房地产业</item>
        <item>L 租赁和商务服务业</item>
        <item>M 科学研究和技术服务业</item>
        <item>N 水利、环境和公共设施管理业</item>
        <item>O 居民服务、修理和其他服务业</item>
        <item>P 教育</item>
        <item>Q 卫生和社会工作</item>
        <item>R 文化、体育和娱乐业</item>
        <item>S 公共管理、社会保障和社会组织</item>
        <item>T 国际组织</item>
        <item>U 其他</item>
    </string-array>
    <string-array name="text_information_level_choices">
        <item>无工作</item>
        <item>中底层</item>
        <item>中层</item>
        <item>高层</item>
    </string-array>
    <string-array name="text_information_education_level_choices">
        <item>小学</item>
        <item>中学</item>
        <item>大专或以上</item>
    </string-array>
    <string-array name="text_information_marital_status_choices">
        <item>未婚</item>
        <item>已婚</item>
        <item>丧偶</item>
        <item>离异</item>
    </string-array>
    <string-array name="text_information_monthly_income_choices">
        <item>1.4k~3k</item>
        <item>3k~5k</item>
        <item>5k~10k</item>
    </string-array>
    <string-array name="text_informationii_smoking_choices">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string-array name="text_informationii_accident_illness_choices">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string-array name="text_informationii_medical_treatment_choices">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string-array name="text_informationii_surgery_choices">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string-array name="text_informationii_pregnancy_choices">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string-array name="text_informationii_blood_illness_choices">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string-array name="text_informationii_muscle_illness_choices">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string-array name="text_informationii_neural_illness_choices">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string-array name="text_informationii_circle_illness_choices">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string name="text_result_title">推荐方案：</string>
    <string name="text_result_start">1、被保人年龄：28周岁\n2、被保人性别：女性\n3、被保人居住地：广东省广州\n4、被保人有社保\n5、被保人职业学生类别1 2类\n6、标准体\n7、未婚\n</string>
    <string name="text_result_title_1">经济方案2：推荐指数：2星</string>
    <string name="text_result_details_1">年缴合计：1869元\n投保思路：因为被保人从事教育行业且年纪尚浅，暂未有经济负担和经济基础。终身型重疾险价格相对高昂，在考虑保险为金融消费品情况下。所以选择投保定期寿险和定期重疾险\n不足之处：保障年龄到60周岁，日后仍需加保终身型重疾</string>
    <string name="text_result_title_2">快捷方案2：推荐指数：2星</string>
    <string name="text_result_details_2">年缴合计：5928.79元\n投保思路：投保人有稳定经济收入来源，希望被保人有一份保障之余。晚年可以存有一笔养老金，所以选择终身型重疾。投保人重疾或身故则无需再缴交保费，此外医保通在产品不停售前提下，保险公司不会因被保人身体情况而停止续保。\n不足之处：价格相对定期险种较贵，随着通货膨胀保额日后应相应增加\n</string>
    <string name="text_result_title_3">性价比方案3：推荐指数：3星</string>
    <string name="text_result_details_3">年缴合计：5496.73元投保思路：因为被保人年纪尚浅，故选择定期寿险、重疾搭配终身型险种。年缴费相对较少之余，最少有50万重疾保障、60万身故保障。晚年亦可保有一笔养老金，除此之外因保险产品推陈出新，日后可将定期险种置换为新型终身产品。</string>
    <string name="text_information_basic_title">请输入基本信息</string>
    <string name="text_information_basic_company_name_title">公司名称：</string>
    <string name="text_information_basic_company_year_title">公司成立年份：</string>
    <string name="text_information_basic_founder_name_title">创始人姓名：</string>
    <string name="text_information_basic_founder_age_title">创始人年龄：</string>
    <string name="text_information_basic_founder_age_hint">该公司创立时，创始人的年龄</string>
    <string name="text_information_basic_founder_degree_title">创始人的最高学位：</string>
    <string-array name="text_information_basic_founder_degree_choices">
        <item>博士及以上</item>
        <item>研究生</item>
        <item>本科</item>
        <item>其它</item>
    </string-array>
    <string name="text_information_basic_founder_school_title">创始人所在学校情况：</string>
    <string-array name="text_information_basic_founder_school_choices">
        <item>国内：985、211院校</item>
        <item>国际：全球TOP200院校</item>
        <item>其它</item>
    </string-array>
    <string name="text_information_basic_founder_entrepreneurship_times_title">创业者之前的创业次数：</string>
    <string name="text_information_basic_founder_industry_experiences_title">创始人行业经验（年限）：</string>
    <string name="text_information_basic_founder_industry_experiences_hint">截止到公司创立时</string>
    <string name="text_information_cofounder_title">请输入联合创始人们的信息</string>
    <string name="text_information_cofounder_team_size_initial_title">团队初创时的创始人个数：</string>
    <string name="text_information_cofounder_team_size_current_title">当前仍然在团队中的创始人个数：</string>
    <string name="text_information_cofounder_gender_investigate_title">当前团队中男性、女性成员的个数：</string>
    <string name="text_information_cofounder_team_role_title">当前团队中，是否有如下角色的成员：</string>
    <string name="text_information_cofounder_cofounder_team_role_product">产品</string>
    <string name="text_information_cofounder_cofounder_team_role_finance">财务</string>
    <string name="text_information_cofounder_cofounder_team_role_operation">运营</string>
    <string name="text_information_cofounder_cofounder_team_role_marketing">市场</string>
    <string name="text_information_cofounder_cofounder_team_role_technology">技术</string>
    <string name="text_information_marketing_and_funding_title">请按照年份输入公司的市场和资金状况</string>
    <string name="text_information_marketing_and_funding_current_year">当前年份</string>
    <string name="text_information_marketing_and_funding_market_scale_hint">市场规模（亿元）</string>
    <string name="text_information_uniqueness_title">公司原创性</string>
    <string name="text_information_uniqueness_technology_innovation">公司是否有技术创新？</string>
    <string name="text_information_uniqueness_patents_and_logo_registration_hint">公司注册了多少知识产权和商标？</string>
    <string name="text_information_uniqueness_business_mode_innovation">公司有无商业模式创新？</string>
    <string name="text_information_uniqueness_marketing_recognition">公司营销是否能得到消费者认可？</string>
    <string name="text_information_uniqueness_government_support">是否得到政府的支持？</string>
    <string name="text_information_uniqueness_community_campus_support">是否得到社区及高校的支持？</string>
    <string name="button_add">添加</string>
    <string name="button_next">下一步</string>
    <string name="button_close">完成</string>
</resources>