<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_information_cofounder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        android:text="@string/text_information_cofounder_title"/>

    <ScrollView
        android:id="@+id/scroll_view_information_cofounder"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp">
        
        <LinearLayout
            android:id="@+id/linear_layout_information_cofounder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_information_cofounder_team_size_initial_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_cofounder_team_size_initial_title"/>

            <EditText
                android:id="@+id/text_information_cofounder_team_size_initial_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_information_cofounder_team_size_current_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_cofounder_team_size_current_title" />

            <EditText
                android:id="@+id/text_information_cofounder_team_size_current_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_information_cofounder_gender_investigate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_cofounder_gender_investigate_title"/>

            <EditText
                android:id="@+id/text_information_cofounder_gender_investigate_male_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/text_information_cofounder_gender_investigate_female_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_information_cofounder_team_role_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_cofounder_team_role_title" />

            <CheckBox
                android:id="@+id/checkbox_information_cofounder_team_role_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_information_cofounder_cofounder_team_role_product"/>

            <CheckBox
                android:id="@+id/checkbox_information_cofounder_team_role_finance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_information_cofounder_cofounder_team_role_finance"/>

            <CheckBox
                android:id="@+id/checkbox_information_cofounder_team_role_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_information_cofounder_cofounder_team_role_operation"/>

            <CheckBox
                android:id="@+id/checkbox_information_cofounder_team_role_marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_information_cofounder_cofounder_team_role_marketing"/>

            <CheckBox
                android:id="@+id/checkbox_information_cofounder_team_role_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_information_cofounder_cofounder_team_role_technology"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_information_cofounder_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:textColor="@color/white"
        android:background="@color/blue" />
</LinearLayout>