<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_view_information_basic"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        
        <LinearLayout
            android:id="@+id/linear_layout_information_basic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_information_basic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:text="@string/text_information_basic_title"/>

            <TextView
                android:id="@+id/text_information_basic_company_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_basic_company_name_title"/>

            <EditText
                android:id="@+id/text_information_basic_company_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_information_basic_company_year_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_basic_company_year_title"/>

            <EditText
                android:id="@+id/text_information_basic_company_year_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_information_basic_founder_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_basic_founder_name_title"/>

            <EditText
                android:id="@+id/text_information_basic_founder_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_information_basic_founder_age_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_basic_founder_age_title"/>

            <EditText
                android:id="@+id/text_information_basic_founder_age_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_information_basic_founder_age_hint"/>

            <TextView
                android:id="@+id/text_information_basic_founder_degree_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_basic_founder_degree_title"/>

            <Spinner
                android:id="@+id/text_information_basic_founder_degree_choices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:id="@+id/text_information_basic_founder_school_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_basic_founder_school_title" />

            <Spinner
                android:id="@+id/text_information_basic_founder_school_choices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:id="@+id/text_information_basic_founder_entrepreneurship_times_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_basic_founder_entrepreneurship_times_title"/>

            <EditText
                android:id="@+id/text_information_basic_founder_entrepreneurship_times_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_information_basic_founder_industry_experiences_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/text_information_basic_founder_industry_experiences_title"/>

            <EditText
                android:id="@+id/text_information_basic_founder_industry_experiences_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_information_basic_founder_industry_experiences_hint" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_information_basic_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:textColor="@color/white"
        android:background="@color/blue"/>
</LinearLayout>