<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <LinearLayout
        android:id="@+id/linear_layout_result"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_result_title"
            android:textSize="@dimen/text_size_large"/>

        <ScrollView
            android:id="@+id/scroll_view_result_details"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/linear_layout_result_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_result_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_result_start"/>

                <TextView
                    android:id="@+id/text_result_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_result_title_1"
                    android:textSize="@dimen/text_size_medium"/>

                <ImageView
                    android:id="@+id/image_result_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/solution1"/>

                <TextView
                    android:id="@+id/text_result_details_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_result_details_1"/>

                <TextView
                    android:id="@+id/text_result_title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_result_title_2"
                    android:textSize="@dimen/text_size_medium"/>

                <ImageView
                    android:id="@+id/image_result_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/solution2"/>

                <TextView
                    android:id="@+id/text_result_details_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_result_details_2"/>

                <TextView
                    android:id="@+id/text_result_title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_result_title_3"
                    android:textSize="@dimen/text_size_medium"/>

                <ImageView
                    android:id="@+id/image_result_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/solution3"/>

                <TextView
                    android:id="@+id/text_result_details_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_result_details_3"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/button_result_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_close"
        android:textColor="@color/white"
        android:background="@color/blue"/>
</LinearLayout>